--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-markdown",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Yeoman generator for Markdown project",
   "license": "MIT",
   "main": "app/index.js",
@@ -46,7 +46,8 @@
     "grunt-mocha-test": "^0.10.2",
     "mkdirp": "^0.5.0",
     "xunit-file": "0.0.5",
-    "grunt-env": "^0.4.1"
+    "grunt-env": "^0.4.1",
+    "grunt-webdriver": "^0.4.0"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
